fixed cross hover portfolio alignment

--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -27,7 +27,7 @@
           top: 50%;
           width: 100%;
           height: 20px;
-          margin-top: -12px;
+          margin-top: -18px;
           text-align: center;
           color: white;
           i {
